General refactoring of most entities, services, repositories and conrtroller für clean code improvements