@@ -2,6 +2,8 @@
 package com.teamanalyzer.teamanalyzer.filter;
 
 import java.io.IOException;
+import java.text.ParseException;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -11,8 +13,6 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-// UserDetailsService bleibt optional injiziert (wird hier nicht genutzt)
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -27,110 +27,114 @@ import jakarta.servlet.http.HttpServletResponse;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
-    private static final Logger log = LoggerFactory.getLogger(JwtAuthFilter.class);
 
-    private final JwtService jwt;
-    @SuppressWarnings("unused")
-    private final UserDetailsService uds;
+    private static final Logger LOG = LoggerFactory.getLogger(JwtAuthFilter.class);
 
-    public JwtAuthFilter(JwtService jwt, UserDetailsService uds) {
-        this.jwt = jwt;
-        this.uds = uds;
+    private static final String BEARER_PREFIX = "Bearer ";
+    private static final String CLAIM_EMAIL = "email";
+    private static final String CLAIM_UID = "uid";
+    private static final String CLAIM_ROLES = "roles";
+    private static final String ROLE_PREFIX = "ROLE_";
+
+    private final JwtService jwtService;
+
+    public JwtAuthFilter(JwtService jwtService) {
+        this.jwtService = jwtService;
     }
 
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
             throws ServletException, IOException {
 
-        String auth = req.getHeader(HttpHeaders.AUTHORIZATION);
-        if (auth == null || !auth.startsWith("Bearer ")) {
+        // Wenn bereits authentifiziert, Filter hier überspringen (keine Überschreibung)
+        if (SecurityContextHolder.getContext().getAuthentication() != null) {
             chain.doFilter(req, res);
             return;
         }
 
-        String token = auth.substring(7).trim();
+        String authHeader = req.getHeader(HttpHeaders.AUTHORIZATION);
+        if (authHeader == null || !authHeader.startsWith(BEARER_PREFIX)) {
+            chain.doFilter(req, res);
+            return;
+        }
+
+        String token = authHeader.substring(BEARER_PREFIX.length()).trim();
+        if (token.isEmpty()) {
+            chain.doFilter(req, res);
+            return;
+        }
 
         try {
-            JWTClaimsSet claims = jwt.validate(token);
+            JWTClaimsSet claims = jwtService.validate(token);
 
-            // Email aus Subject; Fallback auf "email"-Claim
             String email = extractEmail(claims);
+            UUID userId = parseUuidOrNull(readUidAsString(claims));
+            List<String> roles = extractRoleNames(claims);
 
-            // userId aus Claim "uid" robust lesen
-            UUID userId = toUuidOrNull(extractUidString(claims));
-
-            // Rollen als Strings aus dem Token
-            List<String> roleList = extractRoles(claims);
-
-            // Authorities daraus ableiten
-            var authorities = roleList.stream()
-                    .map(r -> r.startsWith("ROLE_") ? r : "ROLE_" + r)
+            var authorities = roles.stream()
+                    .map(JwtAuthFilter::ensureRolePrefix)
                     .map(SimpleGrantedAuthority::new)
                     .toList();
 
-            // Principal mit (userId, email, roles[String])
-            var principal = new AuthUser(userId, email, roleList);
-
+            var principal = new AuthUser(userId, email, roles);
             var authentication = new UsernamePasswordAuthenticationToken(principal, null, authorities);
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
+        } catch (ParseException pe) {
+            // Struktur/Claims nicht lesbar → Debug-Info mit URI
+            LOG.debug("JWT parse error for {}: {}", req.getRequestURI(), pe.getMessage());
         } catch (Exception ex) {
-            log.debug("JWT invalid: {} ({})", ex.getMessage(), req.getRequestURI());
-            // Ungültiges Token -> keine Auth; geschützte Endpunkte liefern dann 401
+            // Signatur/Expiry/sonstige Validierungsfehler
+            LOG.debug("Invalid JWT for {}: {}", req.getRequestURI(), ex.getMessage());
         }
 
         chain.doFilter(req, res);
     }
 
-    /**
-     * Email bevorzugt aus dem Subject lesen; falls leer/fehlend,
-     * auf den String-Claim "email" zurückfallen.
-     * Manche IdPs setzen "email" nicht oder in anderem Typ.
-     */
-    private String extractEmail(JWTClaimsSet claims) {
-        String email = claims.getSubject();
-        if (email == null || email.isBlank()) {
-            try {
-                email = claims.getStringClaim("email");
-            } catch (Exception e) {
-                // Claim fehlt oder hat falschen Typ -> email bleibt null
-            }
+    private static String extractEmail(JWTClaimsSet claims) throws ParseException {
+        String subject = claims.getSubject();
+        if (subject != null && !subject.isBlank()) {
+            return subject;
         }
-        return email;
+        // gezielter Parse; wirft ParseException bei falschem Typ
+        String email = claims.getStringClaim(CLAIM_EMAIL);
+        return (email != null && !email.isBlank()) ? email : null;
     }
 
-    /**
-     * Versucht "uid" als String-Claim zu lesen; wenn der Claim kein String ist,
-     * wird ein generischer Claim geholt und in String konvertiert.
-     */
-    private String extractUidString(JWTClaimsSet claims) {
+    private static String readUidAsString(JWTClaimsSet claims) throws ParseException {
+        // bevorzugt String-Claim; fällt andernfalls auf generischen Claim zurück
         try {
-            return claims.getStringClaim("uid");
-        } catch (Exception e) {
-            Object v = claims.getClaim("uid");
-            return v != null ? String.valueOf(v) : null;
+            String uid = claims.getStringClaim(CLAIM_UID);
+            if (uid != null)
+                return uid;
+        } catch (ParseException ignored) {
+            // Ignorieren und auf generischen Claim zurückfallen
         }
+        Object raw = claims.getClaim(CLAIM_UID);
+        return (raw != null) ? String.valueOf(raw) : null;
     }
 
-    /**
-     * Parsed eine UUID sicher; bei Fehlern wird null zurückgegeben.
-     */
-    private UUID toUuidOrNull(String uidStr) {
+    private static UUID parseUuidOrNull(String maybeUuid) {
+        if (maybeUuid == null || maybeUuid.isBlank())
+            return null;
         try {
-            return uidStr != null ? UUID.fromString(uidStr) : null;
-        } catch (Exception e) {
+            return UUID.fromString(maybeUuid);
+        } catch (IllegalArgumentException e) {
             return null;
         }
     }
 
-    /**
-     * Liest die Rollenliste; akzeptiert List<?> und konvertiert zu List<String>.
-     */
-    private List<String> extractRoles(JWTClaimsSet claims) {
-        Object raw = claims.getClaim("roles");
-        if (raw instanceof List<?>) {
-            return ((List<?>) raw).stream().map(String::valueOf).toList();
+    private static List<String> extractRoleNames(JWTClaimsSet claims) {
+        Object raw = claims.getClaim(CLAIM_ROLES);
+        if (raw instanceof List<?> list) {
+            return list.stream().map(String::valueOf).toList();
         }
-        return List.of();
+        return Collections.emptyList();
+    }
+
+    private static String ensureRolePrefix(String role) {
+        if (role == null || role.isBlank())
+            return ROLE_PREFIX + "UNKNOWN";
+        return role.startsWith(ROLE_PREFIX) ? role : ROLE_PREFIX + role;
     }
 }
